# pywallhaven

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-error-or-typo.md
.github/workflows/: codeql-analysis.yml
docs/source/: changelog.rst  conf.py  index.rst  rate_limit.rst
docs/source/modules/: data_types.rst  util.rst  wallhaven.rst
docs/source/pywallhaven/: exceptions.rst  modules.rst  rate_limit_example_1.py  rate_limit_example_2.py  rate_limit_example_3.py  rate_limit_example_4.py  util.rst  wallhaven.rst
pywallhaven/: __init__.py  exceptions.py  util.py  wallhaven.py
test/: test_util.py
test/resources/: test_tag.json  test_user_collection.json  test_user_collections.json
tests/: test_exceptions.py  test_util.py  test_wallhaven.py
tests/resources/: test_collections.json  test_search.json  test_user_settings.json  test_wallpaper.json
tests/resources/test_paged_collection/: page1.json  page2.json  page3.json
tests/resources/test_paged_search/: no_seed_page_1.json  no_seed_page_2.json  no_seed_page_3.json  with_seed_page_1.json  with_seed_page_2.json  with_seed_page_3.json
