[metadata]
name = pywallhaven
version = 0.3
author = Jason Tait
description = A wrapper for the wallhaven.cc API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jtait/pywallhaven
project_urls =
    Bug Tracker = https://github.com/jtait/pywallhaven/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages = pywallhaven
python_requires = >=3.6
install_requires =
    requests >= "2.25.1"
    urllib3 >= "1.26.3"
    dataclasses >= "0.8"; python_version == "3.6"
    ratelimit >= "2.2.1"
